-- ==========================================================
-- 1. LIMPIEZA DE OBJETOS
-- ==========================================================
DROP TABLE IF EXISTS PerUsuario CASCADE;
DROP TABLE IF EXISTS TipAlcance CASCADE;
DROP TABLE IF EXISTS TipoPermiso CASCADE;
DROP TABLE IF EXISTS LogProcesos CASCADE;
DROP TABLE IF EXISTS EstatSATNom CASCADE;
DROP TABLE IF EXISTS UUIDDNom CASCADE;
DROP TABLE IF EXISTS Parametros CASCADE;
DROP TABLE IF EXISTS Nominas CASCADE;
DROP TABLE IF EXISTS TipoEstaSAT CASCADE;
DROP TABLE IF EXISTS TipoNomina CASCADE;
DROP TABLE IF EXISTS TipoDivision CASCADE;
DROP TABLE IF EXISTS TipoEstNom CASCADE;
DROP TABLE IF EXISTS TipoParam CASCADE;
DROP TABLE IF EXISTS Usuarios CASCADE;

-- ==========================================================
-- 2. FUNCIÓN DE AUDITORÍA
-- ==========================================================
CREATE OR REPLACE FUNCTION actualizar_fecha_modificacion()
RETURNS TRIGGER AS $$
BEGIN
    NEW.actualizado_en = CURRENT_TIMESTAMP;
    RETURN NEW;
END;
$$ LANGUAGE plpgsql;

-- ==========================================================
-- 3. TABLA DE USUARIOS
-- ==========================================================
CREATE TABLE Usuarios (
    id_usuario INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    Usuario VARCHAR(20) NOT NULL UNIQUE,
    Password VARCHAR(255) NOT NULL, 
    NombreUsuario VARCHAR(200) NOT NULL,
    NoCredencial VARCHAR(15),
    creado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    actualizado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP
);

-- ==========================================================
-- 4. TABLAS CATÁLOGO
-- ==========================================================
CREATE TABLE TipoEstaSAT (
    id_estsat INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    DescTEstSAT VARCHAR(100) NOT NULL,
    id_usuario INTEGER NOT NULL,
    creado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    actualizado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT FK_TipoEstaSAT_Usuarios FOREIGN KEY (id_usuario) REFERENCES Usuarios(id_usuario)
);

CREATE TABLE TipoNomina (
    id_tiponom INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    DescTNomina VARCHAR(100),
    id_usuario INTEGER NOT NULL,
    creado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    actualizado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT FK_TipoNomina_Usuarios FOREIGN KEY (id_usuario) REFERENCES Usuarios(id_usuario)
);

CREATE TABLE TipoDivision (
    id_Division INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    DescDivision VARCHAR(100) NOT NULL,
    id_usuario INTEGER NOT NULL,
    creado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    actualizado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT FK_TipoDivision_Usuarios FOREIGN KEY (id_usuario) REFERENCES Usuarios(id_usuario)
);

CREATE TABLE TipoEstNom (
    id_estnom INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    DescTEstNom VARCHAR(100) NOT NULL,
    id_usuario INTEGER NOT NULL,
    creado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    actualizado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT FK_TipoEstNom_Usuarios FOREIGN KEY (id_usuario) REFERENCES Usuarios(id_usuario)
);

CREATE TABLE TipoParam (
    id_TParam INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    DescTParam VARCHAR(100),
    id_usuario INTEGER NOT NULL,
    creado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    actualizado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT FK_TipoParam_Usuarios FOREIGN KEY (id_usuario) REFERENCES Usuarios(id_usuario)
);

-- ==========================================================
-- 5. NUEVAS TABLAS DE PERMISOS (Basadas en imagen)
-- ==========================================================
CREATE TABLE TipoPermiso (
    id_tpermiso INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    DescTPermiso VARCHAR(200) NOT NULL,
    Acronimo VARCHAR(20) NOT NULL,
    id_usuario INTEGER NOT NULL,
    creado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    actualizado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT FK_TipoPermiso_Usuarios FOREIGN KEY (id_usuario) REFERENCES Usuarios(id_usuario)
);

CREATE TABLE TipAlcance (
    id_talcance INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    Alcance VARCHAR(200) NOT NULL,
    DescTAlcance VARCHAR(200) NOT NULL,
    id_tpermiso INTEGER NOT NULL,
    id_usuario INTEGER NOT NULL,
    creado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    actualizado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT FK_TipAlcance_TipoPermiso FOREIGN KEY (id_tpermiso) REFERENCES TipoPermiso(id_tpermiso),
    CONSTRAINT FK_TipAlcance_Usuarios FOREIGN KEY (id_usuario) REFERENCES Usuarios(id_usuario)
);

CREATE TABLE PerUsuario (
    id_PUsuario INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_talcance INTEGER NOT NULL,
    id_usuariomod INTEGER NOT NULL, -- Usuario que modifica
    id_usuario INTEGER NOT NULL,    -- Usuario dueño del permiso
    creado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    actualizado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT FK_PerUsuario_TipAlcance FOREIGN KEY (id_talcance) REFERENCES TipAlcance(id_talcance),
    CONSTRAINT FK_PerUsuario_UsuMod FOREIGN KEY (id_usuariomod) REFERENCES Usuarios(id_usuario),
    CONSTRAINT FK_PerUsuario_UsuOwner FOREIGN KEY (id_usuario) REFERENCES Usuarios(id_usuario)
);

-- ==========================================================
-- 6. TABLA PRINCIPAL: NOMINAS
-- ==========================================================
CREATE TABLE Nominas (
    id_nomina INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    Anio INTEGER NOT NULL,
    mes INTEGER NOT NULL,
    nomina VARCHAR(100) NOT NULL,
    FechaInic DATE,
    FechaFin DATE,
    id_tiponom INTEGER NOT NULL,
    id_Division INTEGER NOT NULL,
    DireccionArch VARCHAR(300) NOT NULL,
    FechaGenXML TIMESTAMPTZ,
    FechaSolTimb TIMESTAMPTZ,
    FechaTim TIMESTAMPTZ,
    CodigoSegSAT VARCHAR(100) NOT NULL,
    id_usuario INTEGER NOT NULL,
    NoRegistros INTEGER NOT NULL,
    creado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    actualizado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    
    CONSTRAINT FK_Nominas_TipoNomina FOREIGN KEY (id_tiponom) REFERENCES TipoNomina(id_tiponom),
    CONSTRAINT FK_Nominas_TipoDivision FOREIGN KEY (id_Division) REFERENCES TipoDivision(id_Division),
    CONSTRAINT FK_Nominas_Usuarios FOREIGN KEY (id_usuario) REFERENCES Usuarios(id_usuario)
);

-- ==========================================================
-- 7. TABLAS DEPENDIENTES
-- ==========================================================
CREATE TABLE EstatSATNom (
    id_estatus INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    FechaCons TIMESTAMPTZ NOT NULL,
    id_estsat INTEGER NOT NULL,
    id_nomina INTEGER NOT NULL,
    id_usuario INTEGER NOT NULL,
    creado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    actualizado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    
    CONSTRAINT FK_EstatSAT_TiposEsta FOREIGN KEY (id_estsat) REFERENCES TipoEstaSAT(id_estsat),
    CONSTRAINT FK_EstatSAT_Nominas FOREIGN KEY (id_nomina) REFERENCES Nominas(id_nomina),
    CONSTRAINT FK_EstatSAT_Usuarios FOREIGN KEY (id_usuario) REFERENCES Usuarios(id_usuario)
);

CREATE TABLE LogProcesos (
    id_log INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    Fecha TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    Descripcion VARCHAR(500) NOT NULL,
    id_nomina INTEGER NOT NULL,
    id_usuario INTEGER NOT NULL,
    creado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    
    CONSTRAINT FK_LogProcesos_Nominas FOREIGN KEY (id_nomina) REFERENCES Nominas(id_nomina),
    CONSTRAINT FK_LogProcesos_Usuarios FOREIGN KEY (id_usuario) REFERENCES Usuarios(id_usuario)
);

CREATE TABLE UUIDDNom (
    id_uidd BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    UIDD UUID NOT NULL,
    RFC VARCHAR(15) NOT NULL,
    id_nomina INTEGER NOT NULL,
    id_estnom INTEGER NOT NULL,
    NoCreden VARCHAR(20) NOT NULL,
    id_usuario INTEGER NOT NULL,
    creado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    actualizado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    
    CONSTRAINT FK_UUIDDNom_Nominas FOREIGN KEY (id_nomina) REFERENCES Nominas(id_nomina),
    CONSTRAINT FK_UUIDDNom_TipoEstNom FOREIGN KEY (id_estnom) REFERENCES TipoEstNom(id_estnom),
    CONSTRAINT FK_UUIDDNom_Usuarios FOREIGN KEY (id_usuario) REFERENCES Usuarios(id_usuario)
);

CREATE TABLE Parametros (
    id_param INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_TParam INTEGER NOT NULL,
    Clave VARCHAR(100) NOT NULL,
    Valor VARCHAR(500) NOT NULL,
    FechaInic DATE NOT NULL,
    FechaFin DATE NOT NULL,
    DescParametro VARCHAR(200) NOT NULL,
    id_usuario INTEGER NOT NULL,
    id_Division INTEGER, 
    creado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    actualizado_en TIMESTAMPTZ DEFAULT CURRENT_TIMESTAMP,
    
    CONSTRAINT FK_Parametros_TipoParam FOREIGN KEY (id_TParam) REFERENCES TipoParam(id_TParam),
    CONSTRAINT FK_Parametros_Usuarios FOREIGN KEY (id_usuario) REFERENCES Usuarios(id_usuario),
    CONSTRAINT FK_Parametros_TipoDivision FOREIGN KEY (id_Division) REFERENCES TipoDivision(id_Division)
);

-- ==========================================================
-- 8. ÍNDICES DE OPTIMIZACIÓN
-- ==========================================================
CREATE INDEX IX_Nominas_Fecha ON Nominas(Anio, mes);

-- Nota: Optimizamos Foreign Keys para JOINs y campos de búsqueda frecuente (WHERE).

-- 8.1. Tabla Usuarios: Búsqueda por número de credencial
CREATE INDEX IF NOT EXISTS IX_Usuarios_NoCredencial ON Usuarios(NoCredencial);

-- 8.2. Permisos y Alcances: Optimizamos la resolución de permisos por usuario
CREATE INDEX IF NOT EXISTS IX_PerUsuario_Usuario ON PerUsuario(id_usuario); -- Ya existente en tu script
CREATE INDEX IF NOT EXISTS IX_PerUsuario_Alcance ON PerUsuario(id_talcance);
CREATE INDEX IF NOT EXISTS IX_TipAlcance_Permiso ON TipAlcance(id_tpermiso);

-- 8.3. Tabla Nominas: Búsquedas temporales y filtrado por división/nómina
-- Creamos un índice compuesto para el filtrado jerárquico de periodos
CREATE INDEX IX_Nominas_Fecha ON Nominas(Anio, mes);
CREATE INDEX IF NOT EXISTS IX_Nominas_Periodo ON Nominas(Anio, mes, nomina);
CREATE INDEX IF NOT EXISTS IX_Nominas_Division ON Nominas(id_Division);
CREATE INDEX IF NOT EXISTS IX_Nominas_TipoNom ON Nominas(id_tiponom);

-- 8.4. Tabla UUIDDNom: Tabla de alta cardinalidad
-- Indispensable para conciliación SAT y búsquedas por empleado
CREATE INDEX IF NOT EXISTS IX_UUIDDNom_RFC ON UUIDDNom(RFC); -- Ya existente en tu script
CREATE INDEX IF NOT EXISTS IX_UUIDDNom_UIDD ON UUIDDNom(UIDD);
CREATE INDEX IF NOT EXISTS IX_UUIDDNom_NoCreden ON UUIDDNom(NoCreden);
CREATE INDEX IF NOT EXISTS IX_UUIDDNom_Nomina ON UUIDDNom(id_nomina);

-- 8.5. Tabla Parametros: Optimización para lógica de negocio
-- Generalmente se busca por clave y división activa
CREATE INDEX IF NOT EXISTS IX_Parametros_Busqueda ON Parametros(Clave, id_Division);
CREATE INDEX IF NOT EXISTS IX_Parametros_Vigencia ON Parametros(FechaInic, FechaFin);

-- 8.6. Logs y Estatus SAT: Optimización para auditoría y monitoreo
CREATE INDEX IF NOT EXISTS IX_LogProcesos_Nomina ON LogProcesos(id_nomina);
CREATE INDEX IF NOT EXISTS IX_EstatSATNom_Nomina ON EstatSATNom(id_nomina);
CREATE INDEX IF NOT EXISTS IX_LogProcesos_Fecha ON LogProcesos(Fecha DESC);

-- ==========================================================
-- 9. GENERACIÓN AUTOMÁTICA DE TRIGGERS
-- ==========================================================
DO $$ 
DECLARE
    t text;
BEGIN
    FOR t IN 
        SELECT table_name FROM information_schema.tables 
        WHERE table_schema = 'public' 
        AND table_name IN ('usuarios', 'tipoestasat', 'tiponomina', 'tipodivision', 
                           'tipoestnom', 'tipoparam', 'tipopermiso', 'tipalcance', 
                           'perusuario', 'nominas', 'estatsatnom', 'uuiddnom', 'parametros')
    LOOP
        EXECUTE format('CREATE TRIGGER tr_act_%I BEFORE UPDATE ON %I FOR EACH ROW EXECUTE FUNCTION actualizar_fecha_modificacion()', t, t);
    END LOOP;
END $$;